// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TWAMM Hook #executeTWAMMOrders gas crossing 1 initialized tick 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 559627,
}
`;

exports[`TWAMM Hook #executeTWAMMOrders gas crossing 2 initialized ticks 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 706787,
}
`;

exports[`TWAMM Hook #executeTWAMMOrders gas with no initialized ticks 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 431989,
}
`;
